--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1500,107 +1500,107 @@ stories:
   domain: http://www.commercejournal.com/
   link: https://www.commercejournal.com/news/no-one-seriously-hurt-after-cars-hit-cows-on-highway/article_862ba61e-2bf4-11ea-94ad-b31605749a8c.html
 images:
-- name: beach-clouds-lifeguard-beachclouds-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-rain.jpg
-- name: server-cloud-server-racks-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-dream.jpg
-- name: old-school-house-old-schoolhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-graham-sutherland.jpg
-- name: carry-load-carryload-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crabapple.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
-- name: docks-docks-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-collage.jpg
-- name: eduardo-eduardo-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-pond.jpg
-- name: window-window-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colored-circuits.jpg
-- name: liberty-back-statue-liberty-back-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-mucha-mult.jpg
-- name: adam-smith-adam-smith-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dali-three.jpg
-- name: mosaic-face-mosaic-face-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
-- name: old-door-lock-old-door-lock-2-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-missle.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
-- name: capital-battle-capitolbattle-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-marcel-duchamp.jpg
-- name: birdhouse-birdhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purple-pond.jpg
-- name: nazi-invasion-IMG_7169.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7169.jpg
-- name: nazi-invasion-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-coming-up-tracks.jpg
-- name: bluelake-clean-view-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-00-00.jpg
-- name: ellis-island-ellisisland-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-graham-sutherland.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
-- name: la-muse-light-rail-yellow-calif.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-light-rail-yellow-calif.jpg
-- name: rain-princess-IMG_6333.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6333.jpg
-- name: la-muse-border-crossing-through-fence-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-crossing-through-fence-2.jpg
-- name: abe-lincoln-one-sunday-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-15-87.jpg
-- name: bf-skinner-thinking-man-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-thinking-man-statue.jpg
-- name: containership-containership-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-brush.jpg
-- name: blossombar-gan-vogh-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-50-62.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
-- name: carry-load-carryload-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-matrix.jpg
-- name: dragon-desert-desert-dragon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-creativity.jpg
-- name: bordercrossing-bordercrossing-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-really-hot.jpg
-- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-- name: fence-mexico-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-mucha-mult.jpg
-- name: aws-s3-dunes-dunes-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still.jpg
-- name: la-muse-high-speed-train-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-high-speed-train-station.jpg
-- name: rain-princess-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0001.jpg
-- name: bf-skinner-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-early-computer-bletchley.jpg
-- name: old-door-lock-old-door-lock-2-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-pond.jpg
-- name: crow_hot_spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_hot_spicy.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-4.jpg
-- name: stalin-time-city-waterfront-path.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-waterfront-path.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-- name: cargo-ship-cargo-ship-on-sea-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-two.jpg
-- name: ellis-island-ellisisland-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dry-skin.jpg
-- name: nazi-invasion-dark-tower-of-london.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dark-tower-of-london.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
-- name: old-house-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-post-modern.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
-- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
+- name: gypsymosaic-gypsy-eyes-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-ww2-color.jpg
+- name: bordercrossing-bordercrossing-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-rain.jpg
+- name: wave-DSC_0291.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
+- name: server-cloud-server-racks-door-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-deep-connections.jpg
+- name: curtain-curtain-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
+- name: dragon-desert-desert-dragon-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
+- name: art-museum-art-museum-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-free-woman.jpg
+- name: crow_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
+- name: supreme-court-supremecourt-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-bright-sand.jpg
+- name: blossombar-dark-rain-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-50-62.jpg
+- name: birdhouse-birdhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
+- name: old-barn-old-barn-1500-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-matrix.jpg
+- name: beach-rocks-beach-rocks-currents-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dry-skin.jpg
+- name: bluelake-dark-rain-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-01-17-38.jpg
+- name: crow_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
+- name: blossombar-hot-spicy-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-50-62.jpg
+- name: statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
+- name: old-granary-field-oldhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
+- name: stories-downtown-fredericksburg-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-nazi-poster.JPG
+- name: fence-fence-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-green-zuma.jpg
+- name: old-gas-pumps-oldgaspumps-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-aqua.jpg
+- name: ellis-island-ellis-island-room-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sunday.jpg
+- name: old-door-lock-old-door-lock-2-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-attack-planes.jpg
+- name: nyc-flag-nycflag-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-spagetti-accident.jpg
+- name: old-granary-field-granaryfield-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-color.jpg
+- name: walled-garden-walled-garden-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-dresden.jpg
+- name: old-school-house-old-schoolhouse-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-wols.jpg
+- name: docks-docks-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-post-modern.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-electricity.jpg
+- name: fence-fence-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alien-goggles.jpg
+- name: carry-load-carryload-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
+- name: crow-crow.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow.jpg
+- name: death-valley-death-valley-national-park-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gan-vogh.jpg
+- name: la-muse-jesus-in-old-rock-church.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-jesus-in-old-rock-church.jpg
+- name: crow-crow-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-sand-paper.jpg
+- name: rain-princess-DSC_0062.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0062.jpg
+- name: old-cabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
+- name: nazi-invasion-statue-capital-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-capital-cannon.jpg
+- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
+- name: status-berlin-status-berlin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
+- name: stories-christianity-under-construction-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
+- name: copper-circuit-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fat-old-pigeon-on-fence.jpg
+- name: birdhouse-birdhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-clean-view.jpg
+- name: store-on-corner-store-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-deep-connections.jpg
+- name: aws-s3-square-C4NLtWrWMAAMY9d.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d.jpg
+- name: aws-s3-stories-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-art-museum-dark-dali.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-monet-one.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+- name: bf-skinner-people-walking-down-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-people-walking-down-street.jpg
 ---
 Best Ideas For Making Fun New Year's Resolutions As A Family.&nbsp;Letter To The Editor.&nbsp;Threatening Freedoms Provokes Revolt.&nbsp;Monte Vista Police Report.&nbsp;Lawyers Want State To Cover Costs Of Monitoring Inmate Care.&nbsp;Rucker Receives Promotion At Erie.&nbsp;Just Loving This Weather.&nbsp;Firearms Instructor Took Out Gunman At Texas Church Service.&nbsp;
